# lowculator

./: .gitignore  CMakeLists.txt  README.md  README.txt  temp.txt
src/: CMakeLists.txt  common.h  control.c  control.h  ctype.inl.h  directives.c  directives.h  error.c  error.h  functions.c  functions.h  lcctype.inl  lcmath.inl  lowculator.c  main.c  main.h  math.inl.h  parse.c  parse.h  result.c  result.h  stack.c  stack.h
