CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(LOWCULATOR C)

SET (LOWCULATOR_VERSION_MAJOR 0)
SET (LOWCULATOR_VERSION_MINOR 0)
SET (LOWCULATOR_VERSION_PATCH 0)
SET (LOWCULATOR_VERSION_TWEAK 0)

SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wconversion -Werror -Wextra -Wformat -std=c11 -O2")
SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lm -s")

ADD_SUBDIRECTORY("src" "bin")
SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

